--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
 
 <div>Cuando tu ISP (o proveedor de internet) bloquea tu acceso a ciertas páginas, lo que hace es que sus servidores (DNS) no redireccionen tu IP a ciertas páginas. <a href="https://www.xataka.com/basics/que-bloqueo-dns-que-utiliza-tu-operador" class="postlink">+Info</a><br />La solución para evitar esto es bastante sencilla, hay que &quot;engañar&quot; a tu proveedor para que &quot;piense&quot; que en realidad quieres acceder a otra página.<br />Existen varias formas de conseguir esto, aquí algunas de ellas:<br /><br /><br /><span style="font-size: 150%; line-height: 116%;">
 
+<span style="font-size: 150%; line-height: 116%;"><span style="color: #a480ff">Brave Browser</span></span><br />Brave es un navegador web de código abierto basado en Chromium, creado por la compañía Brave Software en el año 2016, fundada por el cofundador del Proyecto Mozilla y creador de JavaScript, Brendan Eich.<br />  · <u>Ventajas</u>: El modo incógnito de este navegador utiliza los servicios de Tor para saltear los bloqueos y a su vez cuenta con un cliente de torrent incorporado para realizar las descargas. <br />  <span style="margin: 5px 20px;">
+<div>
+</span> Descarga: <a href="https://brave.com/ccz920" class="postlink"><b><u>Brave Browser.</u></b></a>
+<span style="margin: 5px 20px;">
+<span style="margin-bottom:5px;">
+    </div>
+</span>
+</span><br /><br />
+	
 <span style="color: #a480ff">Tor Project</span></span><br />Es una organización que promueve el anonimato en la red. Que es precisamente lo que queremos, que nuestro ISP no sepa qué queremos visitar.<br />  · <u>Ventajas:</u> Es un navegador portable que está configurado para ocultarnos completamente (además permite acceder a la Deep Web).<br />  · <u>Inconvenientes:</u> Está configurado para ocultar <span style="font-weight: bold">todo</span>, cosa que para ePubLibre no nos interesa, ya que bloquea cookies (no guarda contraseña) y Javascript (bloquea los click de magnets y demás), aunque tiene facil solución. <span style="margin: 5px 20px;">
 <span style="margin-bottom:5px;">
 <span class="genmed" style="font-weight:bold;">Spoiler:</span> <input type="button" value="Mostrar" class="show_hide" onclick="if (this.parentNode.parentNode.getElementsByTagName('div')[0].style.display != '') { this.parentNode.parentNode.getElementsByTagName('div')[0].style.display = ''; this.value = 'Ocultar'; } else { this.parentNode.parentNode.getElementsByTagName('div')[0].style.display = 'none'; this.value = 'Mostrar'; }">
@@ -76,14 +85,7 @@
 </span><br /><br />
 
 
-<span style="font-size: 150%; line-height: 116%;"><span style="color: #a480ff">Brave Browser</span></span><br />Brave es un navegador web de código abierto basado en Chromium, creado por la compañía Brave Software en el año 2016, fundada por el cofundador del Proyecto Mozilla y creador de JavaScript, Brendan Eich.<br />  · <u>Ventajas</u>: El modo incógnito de este navegador utiliza los servicios de Tor y a su vez cuenta con la ventaja de traer incorporado un cliente de torrent para realizar las descargas. <br />  <span style="margin: 5px 20px;">
-<div>
-</span> Descarga: <a href="https://brave.com/ccz920" class="postlink"><b><u>Brave Browser.</u></b></a>
-<span style="margin: 5px 20px;">
-<span style="margin-bottom:5px;">
-    </div>
-</span>
-</span><br /><br />
+
 
 
 
